--- a/index.html
+++ b/index.html
@@ -152,18 +152,28 @@
             <li>
               <a target="_blank" href="https://www.instagram.com">
                 <svg
-                  width="26"
-                  height="26"
-                  viewBox="0 0 26 26"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 32 32"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                 >
                   <path
-                    d="M18.5 1.5H7.5C4.18629 1.5 1.5 4.18629 1.5 7.5V18.5C1.5 21.8137 4.18629 24.5 7.5 24.5H18.5C21.8137 24.5 24.5 21.8137 24.5 18.5V7.5C24.5 4.18629 21.8137 1.5 18.5 1.5Z"
+                    d="M16 21C18.7614 21 21 18.7614 21 16C21 13.2386 18.7614 11 16 11C13.2386 11 11 13.2386 11 16C11 18.7614 13.2386 21 16 21Z"
+                    stroke="#FA41FE"
+                    stroke-width="2"
+                    stroke-miterlimit="10"
+                  />
+                  <path
+                    d="M21.5 4.5H10.5C7.18629 4.5 4.5 7.18629 4.5 10.5V21.5C4.5 24.8137 7.18629 27.5 10.5 27.5H21.5C24.8137 27.5 27.5 24.8137 27.5 21.5V10.5C27.5 7.18629 24.8137 4.5 21.5 4.5Z"
                     stroke="#FA41FE"
                     stroke-width="2"
                     stroke-linecap="round"
                     stroke-linejoin="round"
+                  />
+                  <path
+                    d="M22.5 11C23.3284 11 24 10.3284 24 9.5C24 8.67157 23.3284 8 22.5 8C21.6716 8 21 8.67157 21 9.5C21 10.3284 21.6716 11 22.5 11Z"
+                    fill="#FA41FE"
                   />
                 </svg>
               </a>
